# novel_cover_generation

./: .env  Dockerfile  README.md  amain.py  appconfig_dev.json  appconfig_prod.json  appconfig_stage.json  cdLogger.py  config.py  cpu_usage.py  main.py  pyproject.toml  requirements.txt  run.sh
config/: gunicorn.py
covgen/: __init__.py  api.py  data.py
covgen/actor/: __init__.py
covgen/actor/cover_imitation/: cover_imitation.py  simple_title_generation.py
covgen/actor/image_understanding/: image_understanding.py  image_understanding_prompt.py  image_with_text_understanding.py  image_with_text_understanding_prompt.py
covgen/actor/novel_language_recognition/: novel_language_recognition.py  novel_language_recognition_prompt.py
covgen/actor/novel_theme_recognition/: novel_theme_recognition.py  novel_theme_recognition_prompt.py
covgen/actor/title_generation/: diffuser_titled_cover_generation.py  simple_title_generation.py
covgen/common/: base_prompt.py
covgen/enum/: lang.py  region.py  subject.py
covgen/util/: color_analysis.py  hash.py  image_stringifier.py  read_file.py
resource/: __init__.py
test/: main.py
